--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,26 +1,3 @@
-server:
-  port: 80
-
 spring:
-  datasource:
-    url: jdbc:mysql://localhost:3306/reggie?useSSL=false
-    username: root
-    password: 123456
-  redis:
-    database: 0
-    host: localhost
-    port: 6379
-# spring cache 生效
-#  cache:
-#    redis:
-#      time-to-live: 2000000
-
-mybatis:
-#  configuration:
-#    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
-#  指定 mybatis mapper文件位置
-  mapper-locations: classpath:mapper/*.xml
-
-reggie:
-  basePath: D:\reggie\img\
-#  clearCacheOnStart: 1
+  profiles:
+    active: bate
